<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/nameTextField"
                    android:padding="@dimen/fab_margin"
                    android:text="@string/name_label" />

                <EditText
                    android:id="@+id/nameTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="@dimen/fab_margin"
                    android:importantForAutofill="no"
                    android:text="" />

            </LinearLayout>

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/notificationTypeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/notificationTypeGroup"
                android:text="@string/notification_type_group_label" />
            <RadioGroup
                android:id="@+id/notificationTypeGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/notificationTypeFullscreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/notification_type_fullscreen" />
                <RadioButton
                    android:id="@+id/notificationTypeHeadsUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_type_heads_up" />
                <RadioButton
                    android:id="@+id/notificationTypeNotification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_type_notification" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/fab_margin">

                <Button
                    android:id="@+id/saveAlarmButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSaveAlarmButtonClick"
                    android:padding="@dimen/fab_margin"
                    android:text="@string/save_alarm" />

                <Button
                    android:id="@+id/cancelSavingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCancelSavingButtonClick"
                    android:padding="@dimen/fab_margin"
                    android:visibility="gone"
                    android:text="@string/cancel_saving_alarm" />

                <Button
                    android:id="@+id/deleteAlarmButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onDeleteAlarmButtonClick"
                    android:padding="@dimen/fab_margin"
                    android:text="@string/delete_alarm" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>